--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asciidoctor-tei",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,9 @@
     ]
   },
   "standard": {
-    "globals": ["DOMParser"]
+    "globals": [
+      "DOMParser"
+    ]
   },
   "keywords": [],
   "author": "",
